--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,7 +15,7 @@ $inner-padding: 10px;
   height: 100%;
 }
 
-#action-divider {
+.action-divider {
   background-color: #494949;
 }
 
